# ritn3d-stl-tools

./: LICENSE  README.md  pyproject.toml
src/stl_tools/: __init__.py  cli.py  core.py
tests/: test_core.py
